fix item list alignment and added favicon

--- a/src/Components/Styles/style.css
+++ b/src/Components/Styles/style.css
@@ -136,6 +136,7 @@ body {
   width: calc(600px - 30%);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 2rem;
 }
 
